log
Thu 20 Apr 2023 11:59:28 PM UTC: 
 tests:  1|8
total_score: 0/70
4154086
Fri 21 Apr 2023 12:08:30 AM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
f5db094
Fri 21 Apr 2023 12:16:01 AM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:3: error: unknown type name ‘treenode’; did you mean ‘TreeNode’?
   76 |   treenode* current = map->root;
      |   ^~~~~~~~
      |   TreeNode
treemap.c:76:23: error: ‘map’ undeclared (first use in this function)
   76 |   treenode* current = map->root;
      |                       ^~~
treemap.c:76:23: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:78:15: error: request for member ‘key’ in something not a structure or union
   78 |     if(current->key > key){
      |               ^~
treemap.c:79:24: error: request for member ‘left’ in something not a structure or union
   79 |       current = current->left;
      |                        ^~
treemap.c:81:20: error: request for member ‘key’ in something not a structure or union
   81 |     else if(current->key < key){
      |                    ^~
treemap.c:82:24: error: request for member ‘right’ in something not a structure or union
   82 |       current = current->right;
      |                        ^~
treemap.c:84:15: error: request for member ‘key’ in something not a structure or union
   84 |     if(current->key == key){
      |               ^~
treemap.c:86:14: error: returning ‘int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Werror=int-conversion]
   86 |       return 1;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
c187143
Fri 21 Apr 2023 12:16:19 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:23: error: ‘map’ undeclared (first use in this function)
   76 |   TreeNode* current = map->root;
      |                       ^~~
treemap.c:76:23: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:78:15: error: ‘TreeNode’ has no member named ‘key’
   78 |     if(current->key > key){
      |               ^~
treemap.c:81:20: error: ‘TreeNode’ has no member named ‘key’
   81 |     else if(current->key < key){
      |                    ^~
treemap.c:84:15: error: ‘TreeNode’ has no member named ‘key’
   84 |     if(current->key == key){
      |               ^~
treemap.c:86:14: error: returning ‘int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Werror=int-conversion]
   86 |       return 1;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
63cc9bc
Fri 21 Apr 2023 12:27:57 PM UTC: 
 treemap.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:32: error: expected identifier before ‘,’ token
   78 |     if(is_equal(tree, current->, void* key2)){
      |                                ^
treemap.c:81:27: error: comparison of distinct pointer types lacks a cast [-Werror]
   81 |     else if(current->pair < key){
      |                           ^
cc1: all warnings being treated as errors
Compilation failed
fa6efb6
Fri 21 Apr 2023 12:39:32 PM UTC: 
 treemap.c | 17 ++++++++---------
 1 file changed, 8 insertions(+), 9 deletions(-)
 tests:  6|7
total_score: 5/70
8c4eed6
Fri 21 Apr 2023 12:39:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
0f6876a
Fri 21 Apr 2023 12:41:31 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
3cb084f
Fri 21 Apr 2023 12:43:11 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
763b315
Fri 21 Apr 2023 12:49:09 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  6|7
total_score: 5/70
a1c8eb0
Fri 21 Apr 2023 12:50:26 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
de6333f
Fri 21 Apr 2023 12:50:46 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
922c67d
Fri 21 Apr 2023 01:01:55 PM UTC: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:13: error: unused variable ‘node’ [-Werror=unused-variable]
   51 |   TreeNode *node= createTreeNode(key, value);
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
fc98742
Fri 21 Apr 2023 01:02:25 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e2bfec6
Fri 21 Apr 2023 01:14:47 PM UTC: 
 treemap.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
42fceb5
Fri 21 Apr 2023 01:15:13 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
32ed76f
Fri 21 Apr 2023 01:16:32 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|6
total_score: 15/70
2a51ce6
Fri 21 Apr 2023 01:17:06 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|6
total_score: 15/70
148b62a
Fri 21 Apr 2023 01:17:23 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
ca82755
Fri 21 Apr 2023 01:30:46 PM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:79:8: error: ‘tree’ undeclared (first use in this function); did you mean ‘free’?
   79 |     if(tree->lower_than(x->pair->key, aux->key)==0){
      |        ^~~~
      |        free
treemap.c:79:8: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:79:42: error: ‘TreeNode’ has no member named ‘key’
   79 |     if(tree->lower_than(x->pair->key, aux->key)==0){
      |                                          ^~
Compilation failed
055375c
Fri 21 Apr 2023 01:30:59 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:85:1: error: control reaches end of non-void function [-Werror=return-type]
   85 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
233dc93
